--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dataGen"]
-	path = dataGen
+	path = ResourceGeneration/dataGen
 	url = https://github.com/Traister101/Minecraft-1.12-Data-gen
